fixed tooltip z-index bug

--- a/asset/common/scss/ui/_entry-list.scss
+++ b/asset/common/scss/ui/_entry-list.scss
@@ -63,6 +63,7 @@
     {
         cursor: pointer;
         display: inline-block;
+        z-index: 10;
 
         &:hover
         {
@@ -77,7 +78,7 @@
         right: 30px;
         display: none;
         @include box-shadow(0 1px 0 1px #E4E6EB);
-        z-index: 2;
+        z-index: 12;
 
         &.visible
         {
